# passbrief-pythonista

./: CLAUDE.md  LICENSE  LLM_SKILLS_PRIMER.md  README.md  TODO.md  pyproject.toml  sr22t_briefing_v31.py  test_magnetic_variation.py  test_prompt_generator.py  test_results_summary.md  test_retry_logic.py  test_sr22t_comprehensive.py  test_workflow.py
.claude/: settings.local.json
artifacts/: README_pythonista.txt  passbrief_pythonista.py  skill-api-verification-guide.md  skill-runway-brief-plan.md  test-claude-code-execution.md  test_passbrief_pythonista.py
docs/: README.md  api-reference.md  architecture.md  deployment.md  onboarding-project-overview.md  passbrief-web-app-prd.md
scripts/: build_for_pythonista.py  extract_briefing_generator.py  extract_classes.py
skills/: README.md
skills/runway-brief/: CHANGELOG.md  README.md  VERIFICATION-PROMPT.md
skills/runway-brief/examples/: example-crosswind-landing.md  example-high-da-takeoff.md
skills/runway-brief/references/: __init__.py  calculation_functions.py  sr22t_performance_data.py  v-speeds-reference.md
src/passbrief/: __init__.py  config.py  io.py  logging_utils.py  models.py
src/passbrief/airports/: __init__.py  manager.py
src/passbrief/briefing/: __init__.py  caps.py  chatgpt.py  flavortext.py  generator.py  sid.py
src/passbrief/garmin/: __init__.py  pilot.py
src/passbrief/performance/: __init__.py  calculator.py  data.py
src/passbrief/weather/: __init__.py  manager.py
tests/: __init__.py  test_magnetic_variation.py  test_retry_logic.py  test_sr22t_comprehensive.py  test_workflow.py
